--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -7,17 +7,35 @@
 body
 	font-size: 200%
 	text: center
-	
-
 ul
 	text: center
-	width: 150px
+	width: 20px
 	heigth: 10px
 	list-styled-type: none
 
-ancho-ele
-	width: 300px
+#btn-cir
 
+	padding-top: 20px
+	width: 50px
+	height: 50px
+	padding: 10px 16px
+	font-size: 18px
+	line-height: 1.33
+	border-radius: 25px
 
+#dropbutton
 
+	padding-top: 20px
+	margin-left: 80px
+	padding-left: 34px
 
+#droplist 
+
+	padding-rigth: 20px
+	width: 10px
+
+#spacing-title-nav
+	padding-top: 40px
+	text: center
+	margin-bottom: 30px
+	Text-transform: uppercase
