--- a/app/views/Assets00X.jade
+++ b/app/views/Assets00X.jade
@@ -11,48 +11,58 @@ block content
 	
 		content(class="container col-md-12 col-xs-12 col-lg-12")
 			nav(class="navbar navbar-default")
-					h3 Brand
-				div(class="col-md-3")
-
-				div(class="col-md-1")
-				div(class="btn-group")
-					button(class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown")
-					span(class="caret")
-						i(class="img-rounded") 
-
-							ul
-								li
-									a(href="#") action1
-
-									a(href="#") action2
-						
-				div(class="col-md-1")
+				h3(class="col-md-10 col-xs-10 col-lg-10") Brand
+				div
+				div(class="btn-group" id="dropbutton")
+					button(class="btn btn-info dropdown-toggle" id="btn-cir" type="button" data-toggle="dropdown")
+						i(class=" fui-user img-rounded") 
+						span(class="caret")
+					ul(class="dropdown-menu" id="droplist" role="menu")
+						li
+							a(href="#") Action
+						li
+							a(href="#") Another action
+						li
+							a(href="#") Something else here
 		div(class="row")
 		div(class="row text-center")
 		div(class="col-md-12 container-fluid")
-			h1 title
-		div(class="col-md-12 container-fluid")
-			h2 component title
+			h1(class="text-center" id="spacing-title-nav") Title
+		
 		content(class="content")
 			div(class="row")
-				div(class="col-md-6 col-lg-6 col-xs-6")
+				div(class="col-md-3 col-lg-3 col-xs-3 conj1")
+				div(class="col-md-3 col-lg-3 col-xs-3")
 					p label 1
-				div(class="col-md-6 col-lg-6 col-xs-6")
-					button(class="btn btn-default")
-						p
-							button1
+					button(class="btn btn-default btn-lg") Button1
 			div(class="row")
+				div(class="col-md-3 col-lg-3 col-xs-3 conj1")
+				div(class="col-md-3 col-lg-3 col-xs-3")
+					p label 2
+					button(class="btn btn-info btn-lg") Button2
 				div(class="col-md-6 col-lg-6 col-xs-6")
-					p
-						label_1
+			div(class="row")
+				div(class="col-md-3 col-lg-3 col-xs-3 conj1")
+				div(class="col-md-3 col-lg-3 col-xs-3")
+					p label_3
 					input(type="text", class="form-control", placeholder="Default")
-					
+				div(class="col-md-6 col-lg-6 col-xs-6")
 			div(class="row")
-				div(clss="col-md-6 col-lg-6 col-xs-6")
-					p input1
-				input(type="text" class="form-control" placeholder="Default")
-			div(class="row col-md-6" id="slider")
+				div(class="col-md-3 col-lg-3 col-xs-3 conj1")
+				div(class="col-md-3 col-lg-3 col-xs-3")
+					p label_4
+					input(type="text", class="form-control", placeholder="Default")
+				div(class="col-md-6 col-lg-6 col-xs-6")
+
+		div(class="row col-md-6 col-lg-6 col-xs-6" id="slider")
 	div(class="navbar navbar-default navbar-fixed-bottom")
+		p Accenture Limited 2017
+
+	//-jQuery (necessary for Flat UI's JavaScript plugins)
+	script(src="../assets/css/Flat-UI-master/dist/js/vendor/jquery.min.js")
+
+	//-Include all compiled plugins (below), or include individual files as needed
+	script(src="../assets/css/Flat-UI-master/dist/js/flat-ui.min.js")
 
 
 				
